--- a/Top Interview 150 LeetCode.ipynb
+++ b/Top Interview 150 LeetCode.ipynb
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 81,
    "id": "820bd28d",
    "metadata": {},
    "outputs": [],
@@ -1209,67 +1209,139 @@
     "# Given two strings ransomNote and magazine, return true if ransomNote \n",
     "# can be constructed by using the letters from magazine and false otherwise.\n",
     "\n",
-    "note = \"aa\"\n",
-    "mag = \"ab\"\n",
-    "status = True"
+    "ransomNote = \"aa\"\n",
+    "magazine = \"aba\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
-   "id": "8f40ac9b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "round 0\n",
-      "a\n",
-      "round 1\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "string index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [239]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(mag)):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mround \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(i))\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mmag\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;129;01min\u001b[39;00m note:\n\u001b[0;32m      4\u001b[0m         \u001b[38;5;28mprint\u001b[39m(mag[i])\n\u001b[0;32m      5\u001b[0m         mag \u001b[38;5;241m=\u001b[39m mag[i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m:]  \n",
-      "\u001b[1;31mIndexError\u001b[0m: string index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(len(mag)):\n",
-    "    print(\"round \" + str(i))\n",
-    "    if mag[i] in note:\n",
-    "        print(mag[i])\n",
-    "        mag = mag[i+1:]  \n",
-    "    else:\n",
-    "        status = False\n",
-    "        print(mag[i] + \" not in\")\n",
-    "status"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 280,
-   "id": "978c0923",
+   "execution_count": 91,
+   "id": "14c57bd3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "array = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-    "target = 91\n",
-    "low = 0\n",
-    "high = len(array) - 1"
+    "def canConstruct(ransomNote, magazine):\n",
+    "    dictionary = {}\n",
+    "\n",
+    "    for char in magazine:\n",
+    "        if char not in dictionary:\n",
+    "            dictionary[char] = 1\n",
+    "        else:\n",
+    "            dictionary[char] += 1\n",
+    "    \n",
+    "    for char in ransomNote:\n",
+    "        if char in dictionary and dictionary[char] > 0:\n",
+    "            dictionary[char] -= 1\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    return True\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
-   "id": "2397dd96",
+   "execution_count": 92,
+   "id": "61d1392a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "canConstruct(ransomNote, magazine)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c9c6188",
+   "metadata": {},
+   "source": [
+    "### 205. Isomorphic Strings\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "eaba1c8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Given two strings s and t, determine if they are isomorphic.\n",
+    "# Two strings s and t are isomorphic if the characters in s can be replaced to get t.\n",
+    "# All occurrences of a character must be replaced with another character\n",
+    "# while preserving the order of characters. No two characters may map to\n",
+    "# the same character, but a character may map to itself.\n",
+    "\n",
+    "s = \"egg\"\n",
+    "t = \"add\"\n",
+    "s = \"paper\"\n",
+    "t = \"title\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "248e9a81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isIsomorphic(s, t):\n",
+    "    dictionary1 = {}\n",
+    "    dictionary2 = {}\n",
+    "\n",
+    "    for i in range(len(s)):\n",
+    "        if s[i] not in dictionary1:\n",
+    "            dictionary1[s[i]] = 1\n",
+    "        else:\n",
+    "            dictionary1[s[i]] += 1\n",
+    "\n",
+    "        if t[i] not in dictionary2:\n",
+    "            dictionary2[t[i]] = 1\n",
+    "        else:\n",
+    "            dictionary2[t[i]] += 1\n",
+    "            \n",
+    "    return list(dictionary1.values()) == list(dictionary2.values())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f85c9de8",
+   "metadata": {},
+   "source": [
+    "### 290. Word Pattern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "id": "5f1b03b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Given a pattern and a string s, find if s follows the same pattern.\n",
+    "# Here follow means a full match, such that there is a bijection between\n",
+    "# a letter in pattern and a non-empty word in s.\n",
+    "\n",
+    "pattern = \"abba\"\n",
+    "s = \"dog cat cat dog\"\n",
+    "# pattern =\"abc\"\n",
+    "# s =\"b c a\"\n",
+    "pattern =\"abba\"\n",
+    "s =\"dog cat cat dog\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "id": "a8a36d75",
    "metadata": {},
    "outputs": [
     {
@@ -1278,39 +1350,19 @@
        "False"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "status = False\n",
-    "while low <= high:\n",
-    "    mid = (low + high) // 2\n",
-    "    if target == array[mid]:\n",
-    "        print(\"Target found\")\n",
-    "        status =True\n",
-    "        break\n",
-    "    elif target < array[mid]:\n",
-    "        high = mid - 1\n",
-    "    elif target > array[mid]:\n",
-    "        low = mid + 1\n",
-    "\n",
-    "status"
+    "map(s.find, s) == (pattern.index, pattern)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba081223",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e23051dd",
+   "id": "778ffe32",
    "metadata": {},
    "outputs": [],
    "source": []
