--- a/LeetCodePractice.ipynb
+++ b/LeetCodePractice.ipynb
@@ -987,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "26818d19",
+   "id": "147bdf5d",
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "a0a696a3",
+   "id": "c0ecb97e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "6031b22b",
+   "id": "92b71f32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "9392d528",
+   "id": "ef45a5ca",
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1065,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "d3a3d716",
+   "id": "cd546f4e",
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "507dbf5c",
+   "id": "1ad044b0",
    "metadata": {},
    "outputs": [
     {
@@ -1106,69 +1106,527 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "be09c737",
+   "execution_count": 140,
+   "id": "5f5520f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [0,1,2,4,5,7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc690731",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict1 = {}\n",
+    "ranged = []\n",
+    "\n",
+    "for i in range(len(nums)):\n",
+    "    gap = 0\n",
+    "    while (nums[i] + gap) in nums:\n",
+    "        \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9b4a733e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_file = \"\"\"\n",
+    "* 0 2\n",
+    "C 1 0\n",
+    "╠ 1 1\n",
+    "╣ 1 2\n",
+    "═ 2 1\n",
+    "╚ 3 0\n",
+    "╝ 3 1\n",
+    "╔ 3 2\n",
+    "═ 4 0\n",
+    "═ 4 2\n",
+    "B 5 0\n",
+    "A 5 2\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "15e9a402",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputarray = input_file.split('\\n')[1:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "91ecec37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['* 0 2',\n",
+       " 'C 1 0',\n",
+       " '╠ 1 1',\n",
+       " '╣ 1 2',\n",
+       " '═ 2 1',\n",
+       " '╚ 3 0',\n",
+       " '╝ 3 1',\n",
+       " '╔ 3 2',\n",
+       " '═ 4 0',\n",
+       " '═ 4 2',\n",
+       " 'B 5 0',\n",
+       " 'A 5 2']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "4309e75e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
+      "* 0 2\n",
+      "C 1 0\n",
+      "╠ 1 1\n",
+      "╣ 1 2\n",
+      "═ 2 1\n",
+      "╚ 3 0\n",
+      "╝ 3 1\n",
+      "╔ 3 2\n",
+      "═ 4 0\n",
+      "═ 4 2\n",
+      "B 5 0\n",
+      "A 5 2\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "for i in inputarray:\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "id": "55948ce0",
+   "execution_count": 98,
+   "id": "8759b7aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, left=0, right=0, up=0, down=0):\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "        self.up = up\n",
+    "        self.down = down\n",
+    "        \n",
+    "    def get_array(self):\n",
+    "        return [self.left, self.right, self.up, self.down]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "6b77c55c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = Node(1, 1, 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "0a7608e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict2 = {\n",
+    "    '╠': Node(0, 1, 1, 1),\n",
+    "    '╣': Node(1, 0, 1, 1),\n",
+    "    '═': Node(1, 1, 0, 0),\n",
+    "    '╚': Node(0, 1, 1, 0),\n",
+    "    '╝': Node(1, 0, 1, 0),\n",
+    "    '╔': Node(0, 1, 0, 1)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "8de5e451",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_symbol(matrix, data_set):\n",
+    "    for coord, symbol in data_set:\n",
+    "        x, y = coord\n",
+    "        matrix[x][y] = symbol\n",
+    "    return matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "aa136cc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ListNode(object):\n",
+    "    def __init__(self, x=None):\n",
+    "        self.val = x\n",
+    "        self.next = None\n",
+    "head = [3,2,0,-4]\n",
+    "pos = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "12ed9530",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "head = ListNode(3)\n",
+    "head.next = ListNode(2)\n",
+    "head.next.next = ListNode(0)\n",
+    "head.next.next.next = ListNode(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "651767ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hasCycle(head):\n",
+    "    dict1 = {}\n",
+    "    while head:\n",
+    "        if head not in dict1:\n",
+    "            dict1[head] = True\n",
+    "        else:\n",
+    "            return True\n",
+    "        head = head.next\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "11bc76d1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-4, -1, -1, 0, 1, 2]"
+       "False"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nums = [-1,0,1,2,-1,-4]\n",
-    "sorted_nums = sorted(nums)\n",
-    "three_sum = []\n",
-    "\n"
+    "hasCycle(head)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "39b71800",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list1 = ListNode(1)\n",
+    "list1.next = ListNode(2)\n",
+    "list1.next.next = ListNode(4)\n",
+    "\n",
+    "list2 = ListNode(1)\n",
+    "list2.next = ListNode(3)\n",
+    "list2.next.next = ListNode(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "642820d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while list2:\n",
+    "    print(list2.val)\n",
+    "    list2 = list2.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "35119b2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current = ListNode(0)\n",
+    "while list1 and list2:\n",
+    "    if list1.val < list2.val:\n",
+    "        current.next = list1\n",
+    "        list1 = list1.next\n",
+    "    else:\n",
+    "        current.next = list2\n",
+    "        list2 = list2.next\n",
+    "    current = current.next\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "e9ae5a74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = [1, 2, 5]\n",
+    "head = ListNode()\n",
+    "current = head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "9b46f533",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = [3, 2, 0, -4]\n",
+    "head = ListNode()\n",
+    "current = head\n",
+    "\n",
+    "for i in array:\n",
+    "    new_node = ListNode(i)\n",
+    "    current.next = new_node\n",
+    "    current = new_node\n",
+    "    \n",
+    "head = head.next # remove the place holding node\n",
+    "current.next = head.next # Current: -4 next node will be 2 creating cycle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "3ebfb101",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n",
+      "-4\n",
+      "2\n",
+      "0\n",
+      "-4\n",
+      "2\n",
+      "0\n",
+      "-4\n",
+      "2\n",
+      "0\n",
+      "cycle\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 0\n",
+    "while head:\n",
+    "    print(head.val)\n",
+    "    k += 1\n",
+    "    head = head.next\n",
+    "    if k > 10:\n",
+    "        print(\"cycle\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "id": "16cf9fb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list1 = [1,2,4]\n",
+    "list2 = [1,3,4]\n",
+    "head1 = ListNode()\n",
+    "head2 = ListNode()\n",
+    "current1 = head1\n",
+    "current2 = head2\n",
+    "\n",
+    "\n",
+    "a = list(zip(list1, list2))\n",
+    "\n",
+    "for i,j in a:\n",
+    "    new_node1 = ListNode(i)\n",
+    "    new_node2 = ListNode(j)\n",
+    "    \n",
+    "    current1.next = new_node1\n",
+    "    current2.next = new_node2\n",
+    "    \n",
+    "    current1 = new_node1\n",
+    "    current2 = new_node2\n",
+    "head1 = head1.next\n",
+    "head2 = head2.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "96816349",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = ListNode()\n",
+    "current = root\n",
+    "\n",
+    "while head1 and head2:\n",
+    "    if head1.val < head2.val:\n",
+    "        current.next = head1\n",
+    "        head1 = head1.next\n",
+    "    else:\n",
+    "        current.next = head2\n",
+    "        head2 = head2.next\n",
+    "    current = current.next\n",
+    "current.next = head1 or head2\n",
+    "root = root.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "id": "b25709d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "while root:\n",
+    "    print(root.val)\n",
+    "    root = root.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 392,
+   "id": "c598b8fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list1 = [2,4,3]\n",
+    "list2 = [5,6,4]\n",
+    "head1 = ListNode()\n",
+    "head2 = ListNode()\n",
+    "current1 = head1\n",
+    "current2 = head2\n",
+    "\n",
+    "\n",
+    "a = list(zip(list1, list2))\n",
+    "\n",
+    "for i,j in a:\n",
+    "    new_node1 = ListNode(i)\n",
+    "    new_node2 = ListNode(j)\n",
+    "    \n",
+    "    current1.next = new_node1\n",
+    "    current2.next = new_node2\n",
+    "    \n",
+    "    current1 = new_node1\n",
+    "    current2 = new_node2\n",
+    "head1 = head1.next\n",
+    "head2 = head2.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 393,
+   "id": "cb2697c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = ListNode(0)\n",
+    "current = root\n",
+    "carry = 0\n",
+    "while head1 or head2 or carry:\n",
+    "    added = 0\n",
+    "    \n",
+    "    if head1:\n",
+    "        added += head1.val\n",
+    "        head1 = head1.next\n",
+    "    if head2:\n",
+    "        added += head2.val\n",
+    "        head2 = head2.next\n",
+    "    carry, val = divmod(added+carry, 10)\n",
+    "    new_node = ListNode(val)\n",
+    "    current.next = new_node\n",
+    "    current = current.next\n",
+    "root = root.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 394,
+   "id": "1bcefebc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "0\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "while root:\n",
+    "    print(root.val)\n",
+    "    root = root.next"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78836780",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a4449fe4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "075c1d3f",
+   "id": "63ab4580",
    "metadata": {},
    "outputs": [],
    "source": []
