--- a/Top Interview 150 LeetCode.ipynb
+++ b/Top Interview 150 LeetCode.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5ebeda6a",
    "metadata": {},
    "outputs": [],
@@ -179,15 +179,27 @@
     "# appears at most twice. The relative order of the elements should \n",
     "# be kept the same.\n",
     "\n",
-    "nums = [1,1,1,2,2,3]"
+    "nums = [1,1,1,2,2,3]\n",
+    "nums = [0,0,1,1,1,1,2,3,3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "292a7c1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 2, 3]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Easiest to write but didn't pass all tests\n",
     "\n",
@@ -199,10 +211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3d0d93a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 2, 3]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# k keeps track of the pointer and increments only when there are less than two values\n",
     "# and if there are two values in, it compares the third value to the first pair and inserts\n",
@@ -215,6 +238,33 @@
     "        k += 1\n",
     "nums"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "e7b1ef59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 3, 1, 1, 1, 1, 2, 3, 3]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "684ba7ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -530,39 +580,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75730a3a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6116923a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69601476",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f054289",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "cf50c3b4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1ebab27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d48e5a5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -577,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "c1155131",
    "metadata": {},
    "outputs": [],
@@ -1363,6 +1397,24 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "778ffe32",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd002794",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict1 = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d8a0ac2",
    "metadata": {},
    "outputs": [],
    "source": []
