--- a/LeetCodePractice.ipynb
+++ b/LeetCodePractice.ipynb
@@ -1530,7 +1530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32c95a5b",
+   "id": "f7771241",
    "metadata": {},
    "source": [
     "### Binary Search"
@@ -1578,7 +1578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f89fcc08",
+   "id": "da5324fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1588,7 +1588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "740e05b8",
+   "id": "7dc2c96c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1611,7 +1611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6deb74d3",
+   "id": "861f35b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1626,7 +1626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b05846fb",
+   "id": "e1929367",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1636,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0cff703",
+   "id": "b034e435",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1666,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5acde3e0",
+   "id": "d1e1f194",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1681,7 +1681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba3fd6d4",
+   "id": "4ff48c5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1692,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ae3de53",
+   "id": "6237b169",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1702,7 +1702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f70cf274",
+   "id": "39ceb059",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1713,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeeccd03",
+   "id": "002d3c64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,7 +1739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4c6397a",
+   "id": "a38c2163",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1752,7 +1752,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2768b363",
+   "id": "62cae163",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1765,7 +1765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a276fd4f",
+   "id": "8e41efca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bbad4cf",
+   "id": "6ef92d10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1801,7 +1801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecc1b5dd",
+   "id": "b8efe0c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1828,7 +1828,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c593c6c6",
+   "id": "6947d97c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1838,7 +1838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c70c1725",
+   "id": "5c318471",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1855,7 +1855,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59d20e37",
+   "id": "2494eb62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1884,7 +1884,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7cf4616",
+   "id": "c166b082",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1894,7 +1894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55a33f4e",
+   "id": "fdee1274",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1908,7 +1908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16c1a1da",
+   "id": "e5b9dcaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1918,7 +1918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28da6e9d",
+   "id": "ba7f541f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1933,7 +1933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b14d7eb8",
+   "id": "91430274",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1948,7 +1948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85a8f9c7",
+   "id": "5c095168",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1958,7 +1958,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03c18d27",
+   "id": "c066d362",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1969,7 +1969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "997c0b79",
+   "id": "f8ccd5e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1990,7 +1990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc4a263c",
+   "id": "ede20b10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2011,7 +2011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f224c4b",
+   "id": "51b1b2d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2039,7 +2039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c5340df",
+   "id": "8f703b4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2049,7 +2049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "befaec23",
+   "id": "6a6591e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2060,7 +2060,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55150806",
+   "id": "208816fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2074,7 +2074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7994268f",
+   "id": "303a1fc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2091,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d57c45a2",
+   "id": "14047eaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2101,7 +2101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11ddd1ee",
+   "id": "2468fb12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2115,7 +2115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e54d7443",
+   "id": "2431d599",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2125,7 +2125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba6c8c13",
+   "id": "8c0a7dd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2138,7 +2138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "908aa8cb",
+   "id": "96d41d0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2151,7 +2151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec6ed1ce",
+   "id": "d8b6a18e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,7 +2167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "591b022e",
+   "id": "cab474bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2190,7 +2190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8365d9f3",
+   "id": "59e6888e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2201,7 +2201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21549a30",
+   "id": "8fe5822c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2223,7 +2223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85028cbf",
+   "id": "b3f7829e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2237,7 +2237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ff1390d",
+   "id": "2f9868fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2249,7 +2249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "257a169c",
+   "id": "0b1108d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2271,7 +2271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f140754",
+   "id": "94b540bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2291,21 +2291,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "33c333d0",
+   "execution_count": 2,
+   "id": "a46505dd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# merge sort\n",
     "def merge_sort(arr):\n",
     "    if len(arr) <= 1:\n",
     "        return arr\n",
-    "    mid = len(arr)// 2\n",
+    "    \n",
+    "    mid = len(arr) // 2\n",
     "    \n",
     "    left = arr[:mid]\n",
     "    right = arr[mid:]\n",
     "    \n",
     "    merge_sort(left)\n",
     "    merge_sort(right)\n",
+    "    \n",
     "    \n",
     "    i = j = k = 0\n",
     "    \n",
@@ -2322,41 +2325,142 @@
     "        arr[k] = left[i]\n",
     "        i += 1\n",
     "        k += 1\n",
-    "    \n",
     "    while j < len(right):\n",
     "        arr[k] = right[j]\n",
     "        j += 1\n",
-    "        k += 1\n",
-    "    "
+    "        k += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c7ae5867",
+   "execution_count": 6,
+   "id": "7b4280f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_sort(arr):\n",
+    "    for i in range(1, len(arr)):\n",
+    "        j = i\n",
+    "        while j > 0 and arr[j-1] > arr[j]:\n",
+    "            arr[j], arr[j-1] = arr[j-1], arr[j]\n",
+    "            j -= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5dcbd177",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bubble_sort(arr):\n",
+    "    n = len(arr)\n",
+    "    for i in range(n):\n",
+    "        swapped = False\n",
+    "        for j in range(1, n-1):\n",
+    "            if arr[j-1] > arr[j]:\n",
+    "                arr[j], arr[j-1] = arr[j-1], arr[j]\n",
+    "                swapped = True\n",
+    "        if not swapped:\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "88b80cee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2, 3, 12, 33, 48]"
+       "[1, 2, 5, 6, 7, 8, 9, 4]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nums = [2, 33, 12, 3, 48]\n",
-    "merge_sort(nums)\n",
+    "nums = [2, 5, 1, 6, 9, 8, 7, 4]\n",
+    "bubble_sort(nums)\n",
     "nums"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "id": "f9e30f22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dfs(graph, start, visited=None, traversal_order=None):\n",
+    "    if visited is None:\n",
+    "        visited = set()\n",
+    "    if traversal_order is None:\n",
+    "        traversal_order = []\n",
+    "        \n",
+    "    visited.add(start)\n",
+    "    traversal_order.append(start)\n",
+    "    \n",
+    "    for neighbor in graph[start]:\n",
+    "        if neighbor not in visited:\n",
+    "            dfs(graph, neighbor, visited, traversal_order)\n",
+    "    return traversal_order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "fd7b811c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph = {\n",
+    "    1: [2, 3],\n",
+    "    2: [1, 4, 5],\n",
+    "    3: [1, 6],\n",
+    "    4: [2],\n",
+    "    5: [2],\n",
+    "    6: [3]\n",
+    "}\n",
+    "\n",
+    "graph = {\n",
+    "    'A': ['B', 'C'],\n",
+    "    'B': ['A', 'D', 'E'],\n",
+    "    'C': ['A', 'F'],\n",
+    "    'D': ['B'],\n",
+    "    'E': ['B', 'F'],\n",
+    "    'F': ['C', 'E']\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "80789616",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'B', 'D', 'E', 'F', 'C']"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs(graph, 'A')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "66ada9f5",
+   "id": "a8d3bee7",
    "metadata": {},
    "outputs": [],
    "source": []
